# docs/swagger.yaml
@@ -1,5 +1,25 @@
 basePath: /api/v1
 definitions:
+  stats.Stats:
+    properties:
+      hostname:
+        description: Hostname of the system
+        type: string
+      id:
+        description: A unique identifier for the node (a hardware-bound ID is recommended)
+        type: string
+      model:
+        description: The model/vendor of the system's hardware, useful for identification
+        type: string
+      providers:
+        additionalProperties: true
+        description: Extra, more in-depth information about the system as dynamically
+          returned by providers.
+        type: object
+      uptime:
+        description: Uptime of the system
+        type: integer
+    type: object
   types.KeyRequest:
     properties:
       access:
@@ -16,14 +36,13 @@ info:
     name: AGPLv3
     url: https://spdx.org/licenses/AGPL-3.0-or-later.html
   title: OpenRFSense backend API
-  version: "0.1"
 paths:
   /key:
     post:
       consumes:
       - application/json
       description: Returns an [Emitter channel key](https://emitter.io/develop/getting-started/)
-        for a specific channel and access mode
+        for a specific channel and access mode.
       parameters:
       - description: Channel name and access modes string
         in: body
@@ -39,12 +58,52 @@ paths:
           schema:
             type: string
         "422":
-          description: ""
+          description: When the request JSON is malformed
         "500":
-          description: ""
+          description: When the kestore cannot retrieve the key
       security:
       - BasicAuth: []
       summary: Request an Emitter key
+      tags:
+      - internal
+  /nodes:
+    get:
+      description: Returns a list of all connected nodes by their hardware ID. Will
+        time out in 500ms if any one of the nodes does not respond.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Bare statistics for all the running and connected nodes
+          schema:
+            items:
+              $ref: '#/definitions/stats.Stats'
+            type: array
+        "500":
+          description: When the internal timeout for information retrieval expires
+      security:
+      - BasicAuth: []
+      summary: List nodes
+      tags:
+      - nodes
+  /nodes/{id}/stats:
+    get:
+      description: Returns full stats from the node with given hardware ID. Will time
+        out in 500ms the node does not respond.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Bare statistics for the node associated to the given ID
+          schema:
+            $ref: '#/definitions/stats.Stats'
+        "500":
+          description: When the internal timeout for information retrieval expires
+      security:
+      - BasicAuth: []
+      summary: Get stats from a node
+      tags:
+      - nodes
 securityDefinitions:
   BasicAuth:
     type: basic
